Calc price button added and default value to discount

--- a/index.html
+++ b/index.html
@@ -36,11 +36,17 @@
             </section>
             <div class="discount">
                 <label for="discount">Disccount coupon</label>
-                <input type="text" name="discount" id="discount">
+                <input type="text" name="discount" id="discount" value="code003PA">
+            </div>
+            <div class="calculate_btn">
+                <button>button</button>
             </div>
         </div>
        
     </main>
-    <footer id="site_footer"></footer>
+    <footer id="site_footer">
+        <h4>Your Price</h4>
+
+    </footer>
 </body>
 </html>
