--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <input type="text" name="discount" id="discount" value="code003PA">
             </div>
             <div class="calculate_btn">
-                <button>button</button>
+                <input type="button" value="Calculate" onclick="calculateHamburgerPrice">
             </div>
         </div>
        
