--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
                 <label for="discount">Disccount coupon</label>
                 <input type="text" name="discount" id="discount" value="code003PA">
             </div>
-            <div class="calculate_btn">
-                <input type="button" value="Calculate" onclick="calculateHamburgerPrice">
-            </div>
+            <button id="calc_btn">Calculate</button>
         </div>
        
     </main>
