folder with images attached

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h2>Name your Burger</h2>
             <h3>Ingredients</h3>
             <section class="toppings">
-                <div class="form-toppings">
+                <!-- <div class="form-toppings">
                     <label for="cheese">Cheese</label>
                     <input type="checkbox" name="cheese" id="cheese" data-price="1.0">
                 </div>   
@@ -42,7 +42,7 @@
                 <div class="form-toppings">
                     <label for="ketchup">Ketchup</label>
                     <input type="checkbox" name="ketchup" id="ketchup" data-price="0.5">
-                </div>
+                </div> -->
             </section>
             <div class="discount">
                 <label for="discount">Disccount coupon</label>
