class d-flex name changed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h2>Name your Burger</h2>
             <h4>Ingredients</h4>
             <section class="toppings d_flex justify_between">
-                <div class="d_flex flex-column">
+                <div class="d_flex1">
                    <div class="form-toppings">
                         <img src="./img/Cheese.svg" alt="cheese">
                         <label for="cheese">Cheese</label>
@@ -37,7 +37,7 @@
                         <input type="checkbox" name="mustard" id="mustard" data-price="0.5">
                     </div>    
                 </div>
-                <div class="d_flex flex-column">
+                <div class="d_flex2">
                     <div class="form-toppings">
                         <img src="./img/Tomato.svg" alt="tomato">
                         <label for="tomato">Tomato</label>
