--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header id="site_header">
         <div class="container header_box">
-           <h1>Create your burguer</h1> 
+           <h1>Create your burger</h1> 
            <img class="burguer_img d_flex " src="./img/burger-top.png" alt="">
         </div>
         
@@ -53,10 +53,10 @@
                         <label for="ketchup">Ketchup</label>
                         <input type="checkbox" name="ketchup" id="ketchup" data-price="0.5">
                     </div> 
-                </div>
+                </div> 
             </section>
             <div class="discount">
-                <label for="discount">Disccount coupon</label>
+                <label for="discount">Discount coupon</label>
                 <input type="text" name="discount" id="discount" value="code003PA">
             </div>
             <div class="press_btn">
@@ -69,7 +69,7 @@
     <footer id="site_footer">
         <div class="container footer_box">
             <h4>Your Price</h4>
-            <span>50£</span>
+            <span id="totalPrice">0 €</span>
         </div>
         
     </footer>
